plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.6'
    id 'io.spring.dependency-management' version '1.1.5'
    id "org.sonarqube" version "4.4.1.3373"
}

group = 'com.insight'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'com.github.java-json-tools:json-patch:1.13'
    implementation 'com.opencsv:opencsv:5.9'
    implementation 'com.github.librepdf:openpdf:1.3.35'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.3' // Aktualisierte Version
    testImplementation 'org.mockito:mockito-core:4.6.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.6.1'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-parameters"
}

jar {
    manifest {
        attributes(
            'Main-Class': 'com.insight.backend.BackendApplication'
        )
    }
}

bootJar {
    archiveFileName = 'insight-spring.jar'
}

task buildDocker(type: Exec) {
    dependsOn build
    commandLine 'docker', 'build', '-t', 'insight-spring', '.'
}

task runDocker(type: Exec) {
    dependsOn buildDocker
    commandLine 'docker', 'run', '-p', '81:81', 'insight-spring'
}

test {
    testLogging {
        showStandardStreams = true
        events "PASSED", "SKIPPED", "FAILED", "STANDARD_OUT", "STANDARD_ERROR"
        exceptionFormat "full"

        afterSuite { descriptor, result ->
            if (!descriptor.parent) {
                println "Results: ${result.resultType}"
                println "Tests run: ${result.testCount}, Failures: ${result.failedTestCount}, Skipped: ${result.skippedTestCount}"
            }
        }
    }
}

sonar {
  properties {
    property "sonar.projectKey", "Insight__Backend"
    property "sonar.projectName", "Insight__Backend"
    property "sonar.qualitygate.wait", true
  }
}